# photoshow

./: .gitignore  LICENCE.txt  README.md  README.rst  _pypi-test.cmd  _pypi.cmd  pypi.cmd  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pylint.yml
docs/: conf.py  index.rst  reference.rst  tutorial.rst
docs/_build/: .buildinfo  genindex.html  howto.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorial.html
docs/_build/.doctrees/: environment.pickle  howto.doctree  index.doctree  reference.doctree  tutorial.doctree
docs/_build/_sources/: howto.rst.txt  index.rst.txt  tutorial.rst.txt
docs/_static/: rikfair.css
src/: requirements.txt
src/photoshow/: __init__.py  __main__.py  _photoshow.py  photoshow.py
