[metadata]
name = photoshow
version = 1.0.4
author = Rik Fairbrother
author_email = mail4rik-pypi@yahoo.com
description = Full screen photo slideshow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rikfair/photoshow
project_urls =
    Bug Tracker = https://github.com/rikfair/photoshow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    piexif==1.1.3
    Pillow==9.1.0
    
[options.packages.find]
where = src
